Make sure CSS to make anchors visible doesn't mess with buttons.
Fixed #76.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -62,7 +62,7 @@ code {
     padding-left: 5px;
 }
 
-h2:before, h3:before {
+.page-header h2:before, .page-header h3:before, .anchored:before {
     display:block;
     content: "";
     height: 60px;
